<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.deckerth.thomas.eggservice.views.SettingsActivity$AccountPreferenceFragment"
        android:icon="@drawable/ic_firebase_logo"
        android:title="@string/pref_header_account" />

    <header
        android:fragment="com.deckerth.thomas.eggservice.views.SettingsActivity$ThemePreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_themes" />

    <header
        android:fragment="com.deckerth.thomas.eggservice.views.SettingsActivity$TimingPreferenceFragment"
        android:icon="@drawable/ic_alarm"
        android:title="@string/pref_header_timing" />

</preference-headers>
