<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.StartActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/info_icon"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_firebase_logo" />

    <TextView
        android:id="@+id/info_text"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:text="@string/pref_connect_to_firebase"
        app:layout_constraintLeft_toRightOf="@id/info_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/info_text2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:text="@string/pref_connect_to_firebase2"
        app:layout_constraintLeft_toRightOf="@id/info_icon"
        app:layout_constraintTop_toBottomOf="@id/info_text" />

    <TextView
        android:id="@+id/info_text3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"
        android:paddingEnd="40dp"
        android:text="@string/pref_connect_to_firebase3"
        app:layout_constraintLeft_toRightOf="@id/info_icon"
        app:layout_constraintTop_toBottomOf="@id/info_text2" />

    <View
        android:id="@+id/divider"
        style="@style/Divider.Horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_text3" />

    <Button
        android:id="@+id/googleSignIn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:background="@drawable/rounded_button"
        android:drawableLeft="@drawable/ic_google"
        android:text="@string/login_with_google"
        app:layout_constraintLeft_toLeftOf="@id/vertical_guideline"
        app:layout_constraintRight_toLeftOf="@id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <Button
        android:id="@+id/emailSignIn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:background="@drawable/rounded_button"
        android:drawableLeft="@drawable/ic_login"
        android:text="@string/login_with_email"
        app:layout_constraintLeft_toLeftOf="@id/vertical_guideline"
        app:layout_constraintRight_toLeftOf="@id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/googleSignIn" />

    <Button
        android:id="@+id/offline_mode"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:background="@drawable/rounded_button"
        android:drawableLeft="@drawable/ic_offline"
        android:text="@string/offline_mode"
        app:layout_constraintLeft_toLeftOf="@id/vertical_guideline"
        app:layout_constraintRight_toLeftOf="@id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/emailSignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>